[ALPS06303231] arm64: dts: add TEE perf support
Add dts for TEE perf support

MTK-Commit-Id: e8e62baf8a9330062e31179906fa28bc74a65e2f

Signed-off-by: Jackson Chang <jackson-kt.chang@mediatek.com>
CR-Id: ALPS06303231
Feature: Trustonic TEE (Trusted Execution Environment)
Change-Id: Icb3a14be8aeeb111e3ecb59cd274b258fb2d9cf0

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -3706,6 +3706,11 @@
 			sspm_res_ram_size = <0x510000>; /* 5M + 64K */
 		};
 
+		teeperf {
+			compatible = "mediatek,teeperf";
+			cpu-map = <2>; /* 1: CPU_4_3_1_MAP, 2: CPU_6_2_MAP */
+		};
+
 		/* Trustonic Mobicore SW IRQ number 149 = 32 + 117 */
 		mobicore: mobicore {
 			compatible = "trustonic,mobicore";
