--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -9667,6 +9667,11 @@
 		sspm_res_ram_size = <0x510000>; /* 5M + 64K */
 	};
 
+	teeperf {
+		compatible = "mediatek,teeperf";
+		cpu-map = <1>; /* 1: CPU_4_3_1_MAP, 2: CPU_6_2_MAP */
+	};
+
 	/* Trustonic Mobicore SW IRQ number 713 = 32 + 681 */
 	mobicore: mobicore {
 		compatible = "trustonic,mobicore";
