[ALPS06275255] arm64: dts: mt6983: update DFD_MCU node
1. Enable DFD_MCU cache dump by default.
2. Only dump specified TCM content.

MTK-Commit-Id: 2e59281045ad7726f1f5543361ffcf89b92bdc7c

Signed-off-by: kt.chien <kt.chien@mediatek.com>
CR-Id: ALPS06275255
Feature: Design for Debug(dbg_dfd)
Change-Id: I26aff3594844b2a1ba2cfc17f1a1dbc626d29806

--- a/arch/arm64/boot/dts/mediatek/mt6983.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6983.dts
@@ -1459,10 +1459,13 @@
 			check_pattern_offset = <0x20>;
 			/* dfd_disable_efuse = <25 12>; */
 			dfd_disable_efuse = <(-1) (-1)>;
-			dfd_cache {
-				enabled = <0>;
-				dfd_timeout = <0x1d4c0>;
-				buf_length = <0x2000000>;
+			dfd_cache: dfd_cache {
+				enabled = <1>;
+				/* dfd_timeout = <0x1d4c0>; */ /* 60 sec */
+				dfd_timeout = <0x32c8>; /* 6.5 sec */
+				/* buf_length = <0x2000000>; */
+				buf_length = <0x280000>;
+				tap_en = <0x200000>;
 			};
 		};
 
