--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -1493,6 +1493,7 @@
 		notifier-init;
 		skip-poll-sleep;
 		insert-dummy;
+		unprepare_in_idle;
 		mboxes = <&gce 13 CMDQ_NO_TIMEOUT CMDQ_THR_PRIO_1>;
 		clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
 			 <&mminfra_config_clk CLK_MMINFRA_GCE_26M>;
@@ -1523,6 +1524,7 @@
 		notifier-init;
 		skip-poll-sleep;
 		insert-dummy;
+		unprepare_in_idle;
 		mboxes = <&gce_m 13 CMDQ_NO_TIMEOUT CMDQ_THR_PRIO_1>;
 		clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_M>,
 			 <&mminfra_config_clk CLK_MMINFRA_GCE_26M>;
@@ -1533,6 +1535,7 @@
 		compatible = "mediatek,mailbox-gce-sec";
 		reg = <0 0x1e990000 0 0x4000>;
 		#mbox-cells = <3>;
+		unprepare_in_idle;
 		mboxes = <&gce_m 15 CMDQ_NO_TIMEOUT CMDQ_THR_PRIO_1>;
 		clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_M>;
 		clock-names = "gce";
