--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -4939,6 +4939,7 @@
 			compatible = "mediatek,mminfra-debug";
 			reg = <0 0x1e827000 0 0x90>;
 			power-domains = <&scpsys MT6895_POWER_DOMAIN_MM_INFRA>;
+			interrupts = <GIC_SPI 403 IRQ_TYPE_LEVEL_HIGH 0>;
 			mminfra-bkrs = <1>;
 			init-clk-on;
 			clocks = <&mminfra_config_clk CLK_MMINFRA_GCE_D>,
