--- a/kernel/configs/userdebug.config
+++ b/kernel/configs/userdebug.config
@@ -34,3 +34,4 @@ CONFIG_MTK_VM_DEBUG=y
 CONFIG_MTK_TICK_BROADCAST_DEBUG=y
 CONFIG_MTK_IRQ_MONITOR_DEBUG=y
 CONFIG_MTK_BLOCK_IO_PM_DEBUG=y
+CONFIG_MTK_FSCMD_TRACER=y
