[ALPS06310840] cmdq: Enable MMPROFILE
Enable MMPROFILE.

MTK-Commit-Id: 3e5da987183b125dce2dbf63fb046b6273586e0c

Signed-off-by: “jayce.hsu” <jayce.hsu@mediatek.com>
CR-Id: ALPS06310840
Feature: [Module]CMDQ Driver
Change-Id: Id35df0233265d6772cf90f6679af7ec46022d53b

--- a/drivers/misc/mediatek/cmdq/mailbox/Makefile
+++ b/drivers/misc/mediatek/cmdq/mailbox/Makefile
@@ -11,6 +11,8 @@ ccflags-y += -I$(srctree)/drivers/iommu \
              -I$(srctree)/drivers/misc/mediatek/mmp/ \
              -I$(srctree)/drivers/misc/mediatek/smi/
 
+ccflags-$(CONFIG_DEBUG_FS) += -DCMDQ_MMPROFILE_SUPPORT
+
 ifeq ($(CONFIG_MICROTRUST_TEE_SUPPORT),m)
 include $(srctree)/drivers/tee/teei/Makefile.include
 endif
