ARM: dts: msm: Fix typo in power event irq definition
Fixing a typo in power event irq definition. Currently it is defined
in the format <&intc 130 EDGE> whereas it should be defined like
this <&intc GIC_SPI EDGE>.

Change-Id: I0eccce1d9963a8bed9a43785c22fd56175e0abcd

--- a/qcom/diwali-usb.dtsi
+++ b/qcom/diwali-usb.dtsi
@@ -25,7 +25,7 @@
 		reset-names = "core_reset";
 
 		interrupts-extended = <&pdc 14 IRQ_TYPE_EDGE_RISING>,
-				      <&intc 130 IRQ_TYPE_LEVEL_HIGH>,
+				      <&intc GIC_SPI 130 IRQ_TYPE_LEVEL_HIGH>,
 				      <&pdc 17 IRQ_TYPE_LEVEL_HIGH>,
 				      <&pdc 15 IRQ_TYPE_EDGE_RISING>;
 		interrupt-names = "dp_hs_phy_irq", "pwr_event_irq",
