ARM: dts: msm: Add nvmem cell for PMK8350 SDAM1 to get ufs option
Add a nvmem cell for ufs_dev  within PMK8350 SDAM1 for diwali
This is used by clients to read UFS option (0: UFS2.x 1: UFS3.1).

Change-Id: I0897272e442dc96e2efc6a0bb15441ec1b8a7309

--- a/qcom/diwali-pmic-overlay.dtsi
+++ b/qcom/diwali-pmic-overlay.dtsi
@@ -51,6 +51,13 @@
 	};
 };
 
+&pmk8350_sdam_1 {
+	ufs_dev: ufs_dev@94 {
+		reg = <0x94 0x1>;
+		bits = <0 0>;
+	};
+};
+
 &pm7325_gpios {
 	key_vol_up {
 		key_vol_up_default: key_vol_up_default {
