--- a/qcom/capep.dtsi
+++ b/qcom/capep.dtsi
@@ -5,3 +5,13 @@
 	compatible = "qcom,capep";
 	qcom,msm-id = <531 0x10000>;
 };
+
+&soc {
+	qcom,rmnet-ipa {
+	status = "disabled";
+	};
+};
+
+&ipa_hw {
+	status = "disabled";
+};
