ARM: dts: msm: Add qcom,context-fault-retry for waipio
Enable retrying context faults for apps-smmu only.

Change-Id: I7ca74ea16ddea687c8012d5be36afc425536badf

--- a/qcom/msm-arm-smmu-waipio.dtsi
+++ b/qcom/msm-arm-smmu-waipio.dtsi
@@ -91,6 +91,7 @@
 		#iommu-cells = <2>;
 		qcom,skip-init;
 		qcom,use-3-lvl-tables;
+		qcom,context-fault-retry;
 		qcom,num-context-banks-override = <0x4e>;
 		qcom,num-smr-override = <0x78>;
 		qcom,handoff-smrs = <3>;
