--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -3002,6 +3002,7 @@
 		reg-names = "smmu_iova_ipa";
 		wlan-en-gpio = <&tlmm 80 0>;
 		qcom,bt-en-gpio = <&tlmm 81 0>;
+		qcom,sw-ctrl-gpio = <&tlmm 82 0>;
 		pinctrl-names = "wlan_en_active", "wlan_en_sleep";
 		pinctrl-0 = <&cnss_wlan_en_active>;
 		pinctrl-1 = <&cnss_wlan_en_sleep>;
