--- a/qcom/cape-cdp.dtsi
+++ b/qcom/cape-cdp.dtsi
@@ -2,6 +2,7 @@
 #include <dt-bindings/input/input.h>
 
 #include "cape-pmic-overlay.dtsi"
+#include "waipio-thermal-overlay.dtsi"
 
 &soc {
 	gpio_keys {
