--- a/qcom/cape-mtp.dtsi
+++ b/qcom/cape-mtp.dtsi
@@ -1,6 +1,7 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
 #include "cape-pmic-overlay.dtsi"
+#include "waipio-thermal-overlay.dtsi"
 
 &soc {
 	gpio_keys {
