uio: Kconfig: Make the msm shared memory driver as module
Make the msm shared memory driver as a dynamic module instead of static.

Change-Id: I19ae80e8e700b77ff03f05a3b879755440572e76
Signed-off-by: Richard Patrick <quic_richardp@quicinc.com>

--- a/drivers/uio/Kconfig
+++ b/drivers/uio/Kconfig
@@ -184,7 +184,7 @@ config UIO_DFL
 	  If you compile this as a module, it will be called uio_dfl.
 
 config UIO_MSM_SHAREDMEM
-	bool "MSM shared memory driver"
+	tristate "MSM shared memory driver"
 	default n
 	help
 	  Provides the clients with their respective alloted shared memory
