ARM: dts: msm: Add ufs phy support for cape platform
Add ufs phy support for cape platform.

Change-Id: Ife7ceda3dec83a9c70bdbb7ad7ebdb1637f424a8

--- a/qcom/cape-atp.dtsi
+++ b/qcom/cape-atp.dtsi
@@ -3,7 +3,7 @@
 &soc { };
 
 &ufsphy_mem {
-	compatible = "qcom,ufs-phy-qmp-v4-waipio";
+	compatible = "qcom,ufs-phy-qmp-v4-cape";
 
 	vdda-phy-supply = <&L7B>;
 	vdda-pll-supply = <&L9B>;
