ARM: dts: msm: Add skip-disable-before-sw-enable flag to gx_gdsc
GPU GX GDSC is only required to be disabled from HLOS to initiate
GMU recovery in case of failure. Add support for the same on
DIWALI platform.

Change-Id: I4024f7654903e155fc4bb9b1fa7e78a0f7b4d8e5

--- a/qcom/diwali.dtsi
+++ b/qcom/diwali.dtsi
@@ -3071,6 +3071,7 @@
 	clocks = <&gcc GCC_GPU_CFG_AHB_CLK>;
 	clock-names = "ahb_clk";
 	parent-supply = <&VDD_GFX_LEVEL>;
+	qcom,skip-disable-before-sw-enable;
 	status = "ok";
 };
 
