--- a/qcom/cape-gpu.dtsi
+++ b/qcom/cape-gpu.dtsi
@@ -17,10 +17,11 @@
 
 		clocks = <&clock_gcc GCC_GPU_MEMNOC_GFX_CLK>,
 			<&clock_gcc GCC_GPU_SNOC_DVM_GFX_CLK>,
-			<&clock_gpucc GPU_CC_AHB_CLK>;
+			<&clock_gpucc GPU_CC_AHB_CLK>,
+			<&aoss_qmp>;
 		clock-names = "gcc_gpu_memnoc_gfx",
 				"gcc_gpu_snoc_dvm_gfx",
-				"gpu_cc_ahb";
+				"gpu_cc_ahb", "apb_pclk";
 
 		qcom,gpu-model = "Adreno730v3";
 
@@ -253,10 +254,11 @@
 			<&clock_gcc GCC_DDRSS_GPU_AXI_CLK>,
 			<&clock_gcc GCC_GPU_MEMNOC_GFX_CLK>,
 			<&clock_gpucc GPU_CC_AHB_CLK>,
-			<&clock_gpucc GPU_CC_HUB_CX_INT_CLK>;
+			<&clock_gpucc GPU_CC_HUB_CX_INT_CLK>,
+			<&aoss_qmp>;
 
 		clock-names = "gmu_clk", "cxo_clk", "axi_clk",
-			"memnoc_clk", "ahb_clk", "hub_clk";
+			"memnoc_clk", "ahb_clk", "hub_clk", "apb_pclk";
 
 		iommus = <&kgsl_smmu 0x5 0x400>;
 		qcom,iommu-dma = "disabled";
