msm: Adding File Based Encryption(FBE) support with HWKM V1 in msm 5.15
HWKM V1 driver support needed for legacy targets upgrading to
5.15 kernel for File Based Encryption functionality to use
hardware based keymaster support.

This change ports the required changes from 5.4 to 5.15 kernel and
making HWKM V1 compatible with new structure ice_mmio_data.

Test:
1) FBE test with HWKM V1
   getprop ro.crypto.state :encrypted
   getprop ro.crypto.type :file
2) FBE test on HWKM V2 enabled target
   getprop ro.crypto.state :encrypted
   getprop ro.crypto.type :file

Change-Id: I04bcfe26d19e152772a44a5d54400071f4e3598a
Signed-off-by: Shivangi Kesharwani <quic_skesharw@quicinc.com>

--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -96,6 +96,7 @@ obj-$(CONFIG_GH_TLMM_VM_MEM_ACCESS) += gh_tlmm_vm_mem_access.o
 obj-$(CONFIG_QTI_CRYPTO_COMMON) += crypto-qti-common.o
 obj-$(CONFIG_QTI_CRYPTO_TZ) += crypto-qti-tz.o
 obj-$(CONFIG_QTI_HW_KEY_MANAGER) += hwkm.o crypto-qti-hwkm.o
+obj-$(CONFIG_QTI_HW_KEY_MANAGER_V1) += hwkm_v1.o crypto-qti-hwkm.o
 obj-$(CONFIG_SPS) += sps/
 obj-$(CONFIG_QCOM_HGSL) += hgsl/
 obj-$(CONFIG_MSM_HAB) += hab/
