--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -1009,6 +1009,16 @@ config REGULATOR_QCOM_SPMI
 	  Qualcomm SPMI PMICs as a module. The module will be named
 	  "qcom_spmi-regulator".
 
+config REGULATOR_SPM
+	bool "SPM regulator driver"
+	depends on SPMI
+	help
+	  Enable support for the SPM regulator driver which is used for
+	  setting voltages of processor supply regulators via the SPM module
+	  found inside chips of Qualcomm Technologies Inc. The SPM regulator
+	  driver can be used on QTI SoCs where the APSS processor cores are
+	  supplied by their own PMIC regulator.
+
 config REGULATOR_QCOM_USB_VBUS
 	tristate "Qualcomm USB Vbus regulator driver"
 	depends on SPMI || COMPILE_TEST
