regulator: cpr: add snapshot of cpr-regulator driver
This is snapshot of the cpr-regulator driver as of msm-5.4
'commit 846dd3771e5c ("Merge "input: qcom-hv-haptics: get hBoost base
address before it's used"")'.

Also remove module_param for debug_mask and add support
for debugfs to configure debug_mask variable.

Change-Id: I2e8a73308af9fee7791b4d7e84a33d16a0ab0937
Signed-off-by: Ayyagari Ushasreevalli <quic_aushasre@quicinc.com>

--- a/drivers/regulator/Kconfig
+++ b/drivers/regulator/Kconfig
@@ -296,6 +296,16 @@ config REGULATOR_CPCAP
 	  Say y here for CPCAP regulator found on some Motorola phones
 	  and tablets such as Droid 4.
 
+config REGULATOR_CPR
+	bool "RBCPR regulator driver for APC"
+	depends on OF && QCOM_SCM
+	help
+	  Compile in RBCPR (RapidBridge Core Power Reduction) driver to support
+	  corner vote for APC power rail. The driver takes PTE process voltage
+	  suggestions in efuse as initial settings. It converts corner vote
+	  to voltage value before writing to a voltage regulator API, such as
+	  that provided by spm-regulator driver.
+
 config REGULATOR_CROS_EC
 	tristate "ChromeOS EC regulators"
 	depends on CROS_EC && OF
